# TestPoketLogViewer

./: .gitignore  CMakeLists.txt  README.md  ~$стовое задание.docx  Тестовое задание.docx
src/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TestPoketLogViewer.csproj  TestPoketLogViewer.sln
src/Models/: PokerHand.cs
src/Resources/: Strings.en.xaml  Strings.ru.xaml
src/Services/: FolderScannerService.cs  IFolderScannerService.cs  IJsonParserService.cs  JsonParserService.cs
src/ViewModels/: MainViewModel.cs  RelayCommand.cs
test_logs/: log1.json  log2.json
tests/: CMakeLists.txt  JsonParserServiceTests.cs
